syntax = "proto2";

package st.planning;

message DistRange {
  optional double dist_to_start = 1;
  optional double dist_to_end = 2;
}

message RoadDistInfo {
  enum DistType {
    TOLL_AREA = 1;
    INTERSECTION = 2;
    TUNNEL = 3;
  }
  optional DistType dist_type = 1;
  repeated DistRange dist_range = 2;
}

message RoadHorizon {
  repeated RoadDistInfo road_dist_info = 1;
}
